--- a/createTeam.html
+++ b/createTeam.html
@@ -78,6 +78,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
 </body>
