--- a/dashboard.html
+++ b/dashboard.html
@@ -80,6 +80,7 @@
         </section>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
 </body>
