--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         </div>
     </footer>
 
+    <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
 </body>
