--- a/signup.html
+++ b/signup.html
@@ -73,6 +73,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
 </body>
